Hiding overflow to fix extra whitespace in Firefox.

--- a/media/scss/lightbox-newui.scss
+++ b/media/scss/lightbox-newui.scss
@@ -643,6 +643,7 @@ margin-top: 0;
        width: 687px;
        height: 46px;
        text-align: right;
+       overflow: hidden;
        &.success {
            background-color: $green;
            text-align: center;
